<resources>
    <string name="app_name">binary</string>
    <string name="Insert_Text">Enter Text:</string>
    <string name="write_here">Write here..</string>
    <string name="convert">Convert</string>
    <string name="convert_bin">Binary Convert</string>
    <string name="code_bin">Code Binary:</string>
    <string name="result">010010001</string>
    <string name="save">Save</string>
    <string name="all">TODO</string>
    <string name="header_image">Header image</string>
</resources>