<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:contentDescription="@string/header_image"
        android:scaleType="center"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_bin"
        android:textSize="22sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/iv_banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
      android:id="@+id/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/Insert_Text"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_Tittle"/>


    <EditText
        android:id="@+id/et_input_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="top"
        android:hint="@string/write_here"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <Spinner
        android:id="@+id/sp_origen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_input_text" />

    <Button
        android:id="@+id/btnCalc"
        style="@style/ButtonGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/convert"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_origen"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_binary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_bin"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCalc"
        android:layout_marginTop="16dp"
        />

    <EditText
        android:id="@+id/et_binary_code"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="top"
        android:hint="@string/result"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_binary_title"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/tv_save"
        style="@style/ButtonGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_binary_code" />

</androidx.constraintlayout.widget.ConstraintLayout>